<resources>
    <string name="app_name">Sentilo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="token">Token</string>
    <string name="url">Url</string>
    <string name="nick">Nick</string>
    <string name="enable_location">Enable location</string>
    <string name="save">Save / Start</string>
    <string name="secondsBetweenLocationUpdates">Seconds between location updates</string>
</resources>
