<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.opentrends.sentilo.presentation.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/sentilo_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/token"
                android:imeActionId="@+id/token"
                android:imeActionLabel="@string/token"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:imeActionId="@+id/url"
                android:imeActionLabel="@string/url"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nick"
                android:imeActionId="@+id/nick"
                android:imeActionLabel="@string/nick"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/secondsBetweenLocationUpdates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/secondsBetweenLocationUpdates"
                android:imeActionId="@+id/nick"
                android:imeActionLabel="@string/secondsBetweenLocationUpdates"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/switchLocationTracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="16sp"
            android:text="@string/enable_location" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0.43" />

</LinearLayout>